Added an endpoint to retrieve User by ID
